# ai-learning-training

./: .gitignore  README  README.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml  requirements.txt
AI-agent-crash-course/: another-node  course-notes  project-information
AI-agent-crash-course/multi-agent-example/: requirements.txt
AI-agent-crash-course/src/base-adk-docker/: Dockerfile  requirements.txt
AI-agent-crash-course/src/basic_agent/: Dockerfile  README.md  docker-compose.yml  requests-docker-agent.py
AI-agent-crash-course/src/basic_agent/greeting_agent/: agent.py  testagent.py
AI-agent-crash-course/src/marketing-agent-adk/marketing_campaign_agent/: agent.py  instructions.py  orchestrator_instruction.py
AI-agent-crash-course/src/session/: session_print.py
AI-agent-crash-course/src/sessions-and-state/: basic_stateful_session.py
AI-agent-crash-course/src/test-simple-agent/: agent.py
AI-agent-crash-course/src/tool_agent/: README.md  requirements.txt  runagent.py
Complete-Python-3-BootCamp/10-Python Decorators/: 01-Decorators.ipynb
VertexAI-udemy/: VertexAI-impl.ipynb  lab.py  lab2.py  test.ipynb  vertexa-impl.py  water.py
python_practice/: Untitled.ipynb  Untitled1.ipynb
the-ai-engineer-course-complete-ai-engineer-bootcamp/: Second-trial.ipynb  Untitled.ipynb  first-trial  math.ipynb  ngram.ipynb  stopwords.ipynb  tokenization.ipynb
the-ai-engineer-course-complete-ai-engineer-bootcamp/tokenization_ch/: ngram.py  plot.py  stem.py  token1.py
uv-demo/: README.md  main.py  pyproject.toml
(+2 files in other folders)
