[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "notebook>=7.4.4",
  "google-auth>=2.25.0",
  "requests>=2.32.3",
  "google-cloud-aiplatform>=1.69.0",
  "google-auth-oauthlib",
  "google-api-python-client",
  "vertexai",
  "google-adk>=1.6.1",
  "deprecated",
]
